--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <section class="about-section">
             <h2>// ABOUT NIGHTSHIFT</h2>
             <div class="about-content">
-                <p>Founded in the darkest hour, Nightshift Guild operates when others sleep. We are collectors of secrets, masters of strategy, and guardians of the moonlit hours.</p>
-                <p>Our members specialize in covert operations, night-time raids, and shadow economy. Whether you're a rogue, a spellcaster, or a nightstalker, there's a place for you in our ranks.</p>
+                <p>Founded in the darkest hour, Nightshift Guild operates when others sleep.</p>
+                <p>Our members specialize in covert operations, prime time raids, and shadow economy.</p>
             </div>
         </section>
 
