--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="footer-links">
                 <a href="https://discord.gg/nightshift" target="_blank">Discord</a>
                 <a href="#">Twitch</a>
-                <a href="#">YouTube</a>
+                <a href="https://www.youtube.com/@Scaryflocka">YouTube</a>
                 <a href="#">Twitter</a>
             </div>
             <div class="footer-legal">
