--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                     <h3>Shadow Training</h3>
                     <p>Master the arts of darkness</p>
                     <div class="card-hover-content">
-                        <p>Learn from veteran nightstalkers</p>
+                        <p>Learn from the best and sven</p>
                         <span class="card-pulse"></span>
                     </div>
                 </div>
