--- a/index.html
+++ b/index.html
@@ -85,9 +85,9 @@
                 </div>
                 <div class="interactive-card" data-tilt>
                     <h3>Loot Shares</h3>
-                    <p>Divided by night, multiplied by might</p>
+                    <p>Manged By ticket lady aka Neo</p>
                     <div class="card-hover-content">
-                        <p>Weekly treasure distributions</p>
+                        <p>DO NOT TRUST HER</p>
                         <span class="card-pulse"></span>
                     </div>
                 </div>
