--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 <a href="#">Twitter</a>
             </div>
             <div class="footer-legal">
-                <p>© 2023 Nightshift Guild. All rights reserved.</p>
+                <p>© Trust me on that. All rights reserved.</p>
                 <p>Operating in the shadows since 2015.</p>
             </div>
         </div>
