--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2>// ABOUT NIGHTSHIFT</h2>
             <div class="about-content">
                 <p>Founded in the darkest hour, Nightshift Guild operates when others sleep.</p>
-                <p>Our members specialize in covert operations, prime time raids, and shadow economy.</p>
+                <p>Our members specialize at giving everyone else cancer, prime time raids, and shadow economy.</p>
             </div>
         </section>
 
