--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                     <h3>Night Ops</h3>
                     <p>Covert missions under moonlit skies</p>
                     <div class="card-hover-content">
-                        <p>What ever you do do not join nfsw channel</p>
+                        <p>What ever you do </p>
+                        <p>do not join nfsw channel</p>
                         <span class="card-pulse"></span>
                     </div>
                 </div>
