--- a/index.html
+++ b/index.html
@@ -113,6 +113,28 @@
             </div>
         </div>
     </footer>
+<!-- Add this after your existing sections in index.html -->
+<section class="expectations-section">
+    <h2>// OUR STANDARDS</h2>
+    
+    <div class="expectation-card">
+        <div class="expectation-icon">⚔️</div>
+        <h3>The Nightshift Code</h3>
+        <p>We value honor among shadows. Our strength lies in mutual respect - conflicts are resolved through diplomacy, not drama. Disrespect toward members or opponents results in immediate exile from our ranks.</p>
+    </div>
+
+    <div class="expectation-card">
+        <div class="expectation-icon">🤫</div>
+        <h3>Vow of Silence</h3>
+        <p>Our strategies, compositions, and techniques are proprietary knowledge. What happens in the shadows stays in the shadows. Violating this trust forfeits your place among us.</p>
+    </div>
+
+    <div class="expectation-card">
+        <div class="expectation-icon">💻</div>
+        <h3>Active Engagement</h3>
+        <p>Our war room operates on Discord. Regular check-ins are mandatory, and we exclusively recruit those who fight on the PC battlegrounds. Inactivity beyond 7 days without notice will result in reassignment.</p>
+    </div>
+</section>
 
     <script src="scripts/main.js"></script>
 </body>
